--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-drawer-menu": "^0.2.5",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-keychain": "^3.0.0-rc.3",
+    "react-native-multiple-select": "^0.4.1",
     "react-native-off-canvas-menu": "^0.1.31",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-search-filter": "^0.1.3",
