--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,14 +94,15 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.eterkep"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
+        vectorDrawables.useSupportLibrary = true
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -148,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-crop-picker')
     compile project(':react-native-keychain')
     compile project(':react-native-vector-icons')
     compile project(':react-native-smart-splash-screen')
