--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "react-native-cached-image": "^1.4.3",
     "react-native-drawer-menu": "^0.2.5",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-image-crop-picker": "^0.21.1",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-multiple-select": "^0.4.1",
     "react-native-off-canvas-menu": "^0.1.31",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-search-filter": "^0.1.3",
     "react-native-searchbar": "^1.14.0",
+    "react-native-side-menu": "^1.1.3",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
