--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-crop-picker": "^0.21.1",
     "react-native-keychain": "^3.0.0-rc.3",
+    "react-native-modal-activityindicator": "0.0.1",
     "react-native-multiple-select": "^0.4.1",
     "react-native-off-canvas-menu": "^0.1.31",
     "react-native-router-flux": "^4.0.0-beta.22",
