--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-drawer-menu": "^0.2.5",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-crop-picker": "^0.21.1",
+    "react-native-keyboard-aware-scroll-view": "^0.7.2",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-modal-activityindicator": "0.0.1",
     "react-native-multiple-select": "^0.4.1",
