--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-modal-activityindicator": "0.0.1",
     "react-native-multiple-select": "^0.4.1",
     "react-native-off-canvas-menu": "^0.1.31",
+    "react-native-onesignal": "^3.2.6",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-search-filter": "^0.1.3",
     "react-native-searchbar": "^1.14.0",
