--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-cached-image": "^1.4.3",
